Removed NAnt, updated some log files output folders

--- a/src/Samples/StuffOnAShelf/clock.log4net.config
+++ b/src/Samples/StuffOnAShelf/clock.log4net.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <log4net>
   <appender name="main" type="log4net.Appender.RollingFileAppender">
-    <file value="..\..\..\log\clock.log" />
+    <file value="..\..\log\clock.log" />
     <appendToFile value="true" />
     <maximumFileSize value="100KB" />
     <maxSizeRollBackups value="2" />
