--- a/src/Topshelf.Host/log4net.config
+++ b/src/Topshelf.Host/log4net.config
@@ -4,7 +4,6 @@
 		<level value="ALL" />
 		<appender-ref ref="LogFileAppender" />
 		<appender-ref ref="ColoredConsoleAppender" />
-		<appender-ref ref="EventLogAppender" />
 	</root>
 
 	<logger name="Topshelf">
@@ -30,18 +29,11 @@
 		</layout>
 	</appender>
 	
-	<appender name="EventLogAppender" type="log4net.Appender.EventLogAppender" >
-		<applicationName value="Topshelf.Host" />
-		<layout type="log4net.Layout.PatternLayout">
-			<conversionPattern value="%date [%thread] %-5level %logger - %message%newline" />
-		</layout>
-	</appender>
-
 	<appender name="LogFileAppender"
 		  type="log4net.Appender.RollingFileAppender" >
 		<param name="AppendToFile"
 			 value="true" />
-		<file type="log4net.Util.PatternString" value="..\log\Topshelf.Host.%appdomain.log" />
+		<file type="log4net.Util.PatternString" value="log\Topshelf.Host.%appdomain.log" />
 		<rollingStyle value="Size" />
 		<maxSizeRollBackups value="4" />
 		<maximumFileSize value="10MB" />
