Performed an assembly redirect for nunit, where Magnum.TestFramework has a dependency on an earlier version in the Spec app.config file. Improved the build-file to use task parameters over duplicated code (I really don't like duplicated code ^^). I also had trouble getting rake to run at all with the newly introduced ilmerge.rb file, as it was reffing relative to itself, the ilconfiguration.rb file with the build_support folder, despite the config file being in the same folder. Fixed this. No code-changes. Fixed a spelling mistake and added some more documentation.

--- a/src/Topshelf.Specs/App.config
+++ b/src/Topshelf.Specs/App.config
@@ -8,4 +8,12 @@
   <startup>
     <supportedRuntime version="v2.0.50727"/>
   </startup>
+	<runtime>
+		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+			<dependentAssembly>
+				<assemblyIdentity name="nunit.framework" publicKeyToken="96d09a1eb7f44a77"/>
+				<bindingRedirect oldVersion="2.5.8.10295" newVersion="2.5.9.10348"/>
+			</dependentAssembly>
+		</assemblyBinding>
+	</runtime>
 </configuration>
