Creates new Topshelf.Dashboard assembly
Topshelf requires Spark view engine only for dashboard support.
Projects which doesn't want it shouldn't need to distribute Spark assemblies.
Also, this allow another dashboards implementations (Razor, anyone?)

* Remove NewtonSoft.Json (unused?) and Spark references from TopShelf assembly
* Change Topshelf.Host default namespace from "Topshelf" to "Topshelf.Host"
* Add Topshelf.Dashboard reference to Topshelf.Host
* Add Topshelf.Dashboard reference to Stuff sample project
* Update namespaces to match correct Assemblies/Folders
* Minor cosmetic fixes (mostly unused "using" directives)

--- a/src/Samples/Stuff/Stuff.csproj
+++ b/src/Samples/Stuff/Stuff.csproj
@@ -69,6 +69,10 @@
     <Compile Include="TownCrier.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\Topshelf.Dashboard\Topshelf.Dashboard.csproj">
+      <Project>{67C7C55C-A602-4E95-B75F-D37194E9F676}</Project>
+      <Name>Topshelf.Dashboard</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\Topshelf\Topshelf.csproj">
       <Project>{1EEC6A0D-F213-4716-B5CC-33782BCE1908}</Project>
       <Name>Topshelf</Name>
