--- a/src/Topshelf.Specs/Topshelf.Specs.csproj
+++ b/src/Topshelf.Specs/Topshelf.Specs.csproj
@@ -40,6 +40,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\lib\Magnum\Magnum.dll</HintPath>
     </Reference>
+    <Reference Include="Magnum.FileSystem">
+      <HintPath>..\..\lib\Magnum\Magnum.FileSystem.dll</HintPath>
+    </Reference>
     <Reference Include="Magnum.TestFramework">
       <HintPath>..\..\lib\Magnum\Magnum.TestFramework.dll</HintPath>
     </Reference>
