--- a/Topshelf.nuspec
+++ b/Topshelf.nuspec
@@ -8,9 +8,17 @@
     <language>en-US</language>
     <licenseUrl>https://github.com/Topshelf/Topshelf/blob/master/LICENSE</licenseUrl>
     <projectUrl>https://github.com/Topshelf/Topshelf</projectUrl>
+    <dependencies>
+      <dependency id="log4net" version="1.2.10" />
+    </dependencies>
   </metadata> 
   <files>
-    <file src="build_output\**\*" target="lib" />
+    <file src="build_output\NET35\Topshelf.dll" target="lib\NET35" />
+    <file src="build_output\NET35\Topshelf.xml" target="lib\NET35" />
+    <file src="build_output\NET35\Topshelf.pdb" target="lib\NET35" />
+    <file src="build_output\NET40\Topshelf.dll" target="lib\NET40" />
+    <file src="build_output\NET40\Topshelf.xml" target="lib\NET40" />
+    <file src="build_output\NET40\Topshelf.pdb" target="lib\NET40" />
   </files>
 </package>
 
