--- a/Topshelf.nuspec
+++ b/Topshelf.nuspec
@@ -2,10 +2,11 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd"> 
   <metadata> 
     <id>Topshelf</id> 
-    <version>2.2.1.3</version> 
+    <version>2.3</version> 
     <authors>Chris Patterson, Dru Sellers, Travis Smith</authors>
     <description>Topshelf is a service library and hosting framework for .NET</description> 
     <language>en-US</language>
+	<iconUrl>http://topshelf-project.com/wp-content/themes/pandora/img/slide.1.png/iconUrl>
     <licenseUrl>https://github.com/Topshelf/Topshelf/blob/master/LICENSE</licenseUrl>
     <projectUrl>https://github.com/Topshelf/Topshelf</projectUrl>
     <dependencies>
