Added nuget packages for new loggers

--- a/src/Loggers/Topshelf.Log4NetIntegration/Topshelf.Log4NetIntegration.csproj
+++ b/src/Loggers/Topshelf.Log4NetIntegration/Topshelf.Log4NetIntegration.csproj
@@ -29,6 +29,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Release\Topshelf.Log4NetIntegration.XML</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="log4net" Condition="'$(TargetFrameworkVersion)' == 'v3.5'">
