--- a/src/Loggers/Topshelf.NLogIntegration/Topshelf.NLogIntegration.csproj
+++ b/src/Loggers/Topshelf.NLogIntegration/Topshelf.NLogIntegration.csproj
@@ -29,6 +29,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Release\Topshelf.NLogIntegration.XML</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="NLog" Condition="'$(TargetFrameworkVersion)' == 'v3.5'">
