cleaning up duplicated code in the builders
the builders each had their own copy of the matches<T> method.

I also wrote a test to ensure that the base class wouldn't screw up the Match<T> method.

--- a/src/Topshelf.Specs/Topshelf.Specs.csproj
+++ b/src/Topshelf.Specs/Topshelf.Specs.csproj
@@ -75,6 +75,7 @@
     <Compile Include="AppDomain_Specs.cs" />
     <Compile Include="BddExtensions.cs" />
     <Compile Include="Bottle\Bottle_Specs.cs" />
+    <Compile Include="Config\Builder_Specs.cs" />
     <Compile Include="Config\EmptyConfigurator_Specs.cs" />
     <Compile Include="Config\Recovery_Specs.cs" />
     <Compile Include="ContextSetup.cs" />
