fixed up ServiceCoordinator tests, they all pass
I had to add some methods that I am not sure fit our semantic model, but now that I have them, they should be easy to refactor into the correct style

--- a/src/Topshelf.Specs/Topshelf.Specs.csproj
+++ b/src/Topshelf.Specs/Topshelf.Specs.csproj
@@ -83,7 +83,7 @@
     <Compile Include="ServiceCoordinator\ServiceCoordinator_Singles_Specs.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="ServiceCoordinator\ServiceCoordinator_SpecsBase.cs">
+    <Compile Include="ServiceCoordinator\InterationContext.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="ServiceTests\Bob.cs" />
