--- a/src/Loggers/Topshelf.Log4NetIntegration/Topshelf.Log4NetIntegration.csproj
+++ b/src/Loggers/Topshelf.Log4NetIntegration/Topshelf.Log4NetIntegration.csproj
@@ -32,10 +32,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="log4net" Condition="'$(TargetFrameworkVersion)' == 'v3.5'">
-      <HintPath>..\..\..\lib\log4net\net35-full\log4net.dll</HintPath>
+      <HintPath>..\..\..\lib\log4net\2.0.0\net35-full\log4net.dll</HintPath>
     </Reference>
     <Reference Include="log4net" Condition="'$(TargetFrameworkVersion)' == 'v4.0'">
-      <HintPath>..\..\..\lib\log4net\net40-full\log4net.dll</HintPath>
+      <HintPath>..\..\..\lib\log4net\2.0.0\net40-full\log4net.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
