--- a/src/Loggers/Topshelf.Log4NetIntegration.1.2.10/Topshelf.Log4NetIntegration.1.2.10.csproj
+++ b/src/Loggers/Topshelf.Log4NetIntegration.1.2.10/Topshelf.Log4NetIntegration.1.2.10.csproj
@@ -9,7 +9,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Topshelf</RootNamespace>
-    <AssemblyName>Topshelf.Log4NetIntegration</AssemblyName>
+    <AssemblyName>Topshelf.Log4NetIntegration.1.2.10</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -31,11 +31,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="log4net" Condition="'$(TargetFrameworkVersion)' == 'v3.5'">
-      <HintPath>..\..\..\lib\log4net\2.0.0\net35-full\log4net.dll</HintPath>
-    </Reference>
-    <Reference Include="log4net" Condition="'$(TargetFrameworkVersion)' == 'v4.0'">
-      <HintPath>..\..\..\lib\log4net\2.0.0\net40-full\log4net.dll</HintPath>
+    <Reference Include="log4net">
+      <HintPath>..\..\..\lib\log4net\1.2.10\log4net.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
