starting to get a grip on how to do the process shelf

--- a/src/Topshelf/Topshelf.csproj
+++ b/src/Topshelf/Topshelf.csproj
@@ -200,22 +200,24 @@
     <Compile Include="Messages\StartService.cs" />
     <Compile Include="Messages\StopService.cs" />
     <Compile Include="Messages\UnloadService.cs" />
-    <Compile Include="Model\HostChannel.cs" />
+    <Compile Include="Model\ServiceModels\AppDomain\HostChannel.cs" />
     <Compile Include="Model\IServiceWorkflow.cs" />
-    <Compile Include="Model\OutboundChannel.cs" />
+    <Compile Include="Model\ServiceModels\AppDomain\OutboundChannel.cs" />
     <Compile Include="Model\IServiceChannel.cs" />
-    <Compile Include="Model\ServiceChannel.cs" />
+    <Compile Include="Model\ServiceModels\OutProcess\ProcessReference.cs" />
+    <Compile Include="Model\ServiceModels\OutProcess\ProcessServiceController.cs" />
+    <Compile Include="Model\ServiceModels\AppDomain\ServiceChannel.cs" />
     <Compile Include="Model\ServiceCoordinator.cs" />
     <Compile Include="Model\IServiceCoordinator.cs" />
-    <Compile Include="Model\LocalServiceController.cs" />
+    <Compile Include="Model\ServiceModels\Local\LocalServiceController.cs" />
     <Compile Include="Model\ServiceControllerFactory.cs" />
-    <Compile Include="Model\PublishChannel.cs" />
+    <Compile Include="Model\ServiceModels\AppDomain\PublishChannel.cs" />
     <Compile Include="Messages\ServiceInfo.cs" />
     <Compile Include="Messages\ServiceStatus.cs" />
     <Compile Include="OS\OsDetector.cs" />
     <Compile Include="Shelving\ShelfConfiguration.cs" />
-    <Compile Include="Model\ShelfReference.cs" />
-    <Compile Include="Model\ShelfServiceController.cs" />
+    <Compile Include="Model\ServiceModels\AppDomain\ShelfReference.cs" />
+    <Compile Include="Model\ServiceModels\AppDomain\ShelfServiceController.cs" />
     <Compile Include="Model\ShelfType.cs" />
     <Compile Include="Internal\ReSharperStaticAnalysis.cs" />
     <Compile Include="OS\Windows\WindowsUserAccessControl.cs" />
@@ -235,8 +237,8 @@
     <Compile Include="Model\ServiceFactory.cs" />
     <Compile Include="Extensions\ProcessExtensions.cs" />
     <Compile Include="Shelving\Bootstrapper.cs" />
-    <Compile Include="Model\Shelf.cs" />
-    <Compile Include="Model\HostChannelFactory.cs" />
+    <Compile Include="Model\ServiceModels\AppDomain\Shelf.cs" />
+    <Compile Include="Model\ServiceModels\AppDomain\HostChannelFactory.cs" />
     <Compile Include="Model\IServiceController.cs" />
     <Compile Include="Config\Credentials.cs" />
     <Compile Include="Exceptions\ConfigurationException.cs" />
