--- a/src/SampleTopshelfService/SampleTopshelfService.csproj
+++ b/src/SampleTopshelfService/SampleTopshelfService.csproj
@@ -74,6 +74,7 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SampleService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Topshelf\Topshelf.csproj">
